--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -135,9 +135,13 @@
   }
 
   .widget-instagram-feed {
-    @media only screen and (min-width: 992px) and (max-width: 1399px) {
+    @include lg {
       width: 170px;
       grid-template-columns: repeat(3, 1fr);
+    }
+    @include xl{
+      width: 170px;
+      grid-template-columns: repeat(2, 1fr);
     }
   }
   // Footer Info Widget
@@ -329,6 +333,10 @@
 
 // Footer Bottom Section
 .footer-bottom-menu {
+  @include sm{
+    border-top: 1px solid;
+    padding-top: 16px;
+  }
   ul {
     list-style: none;
     display: flex;
@@ -341,6 +349,9 @@
 
     @include rmaxwd(991) {
       justify-content: flex-start;
+    }
+    @include md{
+      gap: 12px;
     }
 
     li {
@@ -362,18 +373,22 @@
 .footer-bottom-area {
   padding: 24px 0;
 
-
-  @include rmaxwd(991) {
+  @include sm {
+    padding: 16px 0;
+  }
+  @include md {
     padding: 30px 0;
   }
   .copyright-text {
     @include rmaxwd(767) {
-      margin-bottom: 20px;
+      margin-bottom: 16px;
     }
     p {
       color: $white-100;
       margin-bottom: 0;
-
+      @include rmaxwd(991){
+        font-size: 15px;
+      }
       a {
         color: $white;
         font-weight: 500;
@@ -384,6 +399,7 @@
       }
     }
   }
+  
   .credit-text {
     p {
       color: $white-100;
